<resources>
    <string name="app_name_EN">Movie4Share</string>
    <string name="app_name">影片分享小站</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="loginActivity_user_sign_in">用户登录</string>
    <string name="loginActivity_seller_sign_in">卖家登录</string>
    <string name="loginActivity_admin_sign_in">管理员登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bought_list_str">我的订单</string>
    <string name="nav_profile_str">修改资料</string>
    <string name="nav_logoff_str">注销</string>
    <string name="movie_search">电影片名搜索</string>
    <string name="movie_type_action">动作片</string>
    <string name="more">更多 ＞</string>
    <string name="movie_type_love">爱情片</string>
    <string name="movie_type_fun">喜剧片</string>
    <string name="scan_qr">扫一扫</string>
    <string name="search_hint">搜索电影名称</string>
</resources>
