<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/side_nav_bar_opposite"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/findnew"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/fragment_findnew_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="24sp"
            android:text="分类"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/fragment_find_new_action_relative"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/fragment_find_new_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_type_action"
                    android:textSize="18dp"
                    android:textColor="@color/darkgray"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/movie_type_action_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textSize="13dp"
                    android:textColor="#888889"
                    android:layout_marginEnd="20dp"
                    android:layout_alignBottom="@+id/fragment_find_new_action"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <GridView android:id="@+id/grid1"
                        android:layout_width="1500dp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:numColumns="12"
                        />
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/fragment_find_new_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_type_love"
                    android:textSize="18dp"
                    android:textColor="@color/darkgray"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/movie_type_love_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textSize="13dp"
                    android:textColor="#888889"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/fragment_find_new_love"
                    />

            </RelativeLayout>


            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="170dp"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">
                    <GridView android:id="@+id/grid2"
                        android:layout_width="1500dp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:numColumns="12"/>
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/fragment_find_new_fun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_type_fun"
                    android:textSize="18dp"
                    android:textColor="@color/darkgray"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/movie_type_fun_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textSize="13dp"
                    android:textColor="#888889"
                    android:layout_marginEnd="20dp"
                    android:layout_alignBottom="@+id/fragment_find_new_fun"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="170dp"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">
                    <GridView android:id="@+id/grid3"
                        android:layout_width="1500dp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:numColumns="12"/>
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>



