<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/repeat_movie_bg"
    tools:context="com.example.star.movie4share.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#cf000000">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_trans"
                android:background="@color/darkgray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="WELCOME TO MOVIE4SHARE"
                android:textColor="#8a8a8a"
                android:textSize="24dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="130dp"
                android:layout_gravity="center_horizontal"
                >
                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/email_icon" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/login_id_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textCursorDrawable="@null"
                        android:background="@null"
                        android:drawableBottom="@drawable/edittext_bottom_line"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/lightGray"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/pw_icon"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/password_icon" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="155dp"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:layout_gravity="center_horizontal"
                        android:drawableBottom="@drawable/edittext_bottom_line"
                        android:imeActionId="6"
                        android:imeActionLabel="登陆"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/user_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#8a8a8a"
                android:textColor="@color/darkgray"
                android:layout_marginTop="25dp"
                android:text="@string/loginActivity_user_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/seller_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:textColor="#8a8a8a"
                    android:text="@string/loginActivity_seller_sign_in"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/admin_sign_in_button"
                    android:layout_marginStart="30dp"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:textColor="#8a8a8a"
                    android:text="@string/loginActivity_admin_sign_in"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
